--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask==3.0.2
-Flask-SocketIO==5.3.6
-python-socketio==5.11.1
-python-engineio==4.9.1
-Pillow==10.2.0
-Flask-SQLAlchemy==3.1.1 
+Flask==2.0.1
+Werkzeug==2.0.3
+Flask-SocketIO==5.1.1
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.23
+Pillow==8.3.1
+python-socketio==5.4.0
+python-engineio==4.2.1 
