--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ Flask-SQLAlchemy==2.5.1
 SQLAlchemy==1.4.23
 Pillow==8.3.1
 python-socketio==5.4.0
-python-engineio==4.2.1 
+python-engineio==4.2.1
+gunicorn==20.1.0
+eventlet==0.33.3 
