--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 Flask==2.0.1
-Werkzeug==2.0.3
 Flask-SocketIO==5.1.1
 Flask-SQLAlchemy==2.5.1
-SQLAlchemy==1.4.23
-Pillow==8.3.1
-python-socketio==5.4.0
+Flask-Login==0.5.0
+Flask-WTF==0.15.1
 python-engineio==4.2.1
+python-socketio==5.4.0
+eventlet==0.30.2
 gunicorn==20.1.0
-eventlet==0.33.3 
+gevent==21.8.0
+gevent-websocket==0.10.1
+Werkzeug==2.0.1
+SQLAlchemy==1.4.23
+python-dotenv==0.19.0
+Pillow==8.3.1 
